crates/neenee-code/src/tui/render/snapshots/neenee_code__tui__render__snapshot_tests__bash_expanded_renders_markers_and_output.snap
---
source: crates/neenee-code/src/tui/render/snapshot_tests.rs
expression: "render_grid(&m, 80, 40)"
---
  - Run cargo test

    $ cargo test
    running 3 tests
    .
    .
    .
    test result: ok. 3 passed
    STDOUT:
    built ok
    Exit 0

backgrounds:
.=reset  B=#070808  C=#111312
0: .2 B76
1: .2 B76
2: .2 C76
3: .2 C76
4: .2 C76
5: .2 C76
6: .2 C76
7: .2 C76
8: .2 C76
9: .2 C76
10: .2 C76
