crates/neenee-code/src/tui/render/snapshots/neenee_code__tui__render__snapshot_tests__edit_file_diff_renders_from_structured_patch.snap
---
source: crates/neenee-code/src/tui/render/snapshot_tests.rs
expression: "render_grid(&m, 80, 30)"
---
  - Edit a.rs +1 -1 · 0ms

     1 - let x = 1;
     1 + let x = 2;

backgrounds:
.=reset  B=#070808  C=#201414  D=#402828  E=#121F16  F=#2A4030
0: .2 B76
1: .2 B76
2: .2 C15 D2 C59
3: .2 E15 F2 E59
