crates/neenee-code/src/tui/render/snapshots/neenee_code__tui__render__snapshot_tests__edit_file_multihunk_interleaves_changes.snap
---
source: crates/neenee-code/src/tui/render/snapshot_tests.rs
assertion_line: 320
expression: "render_grid(&m, 80, 40)"
---
  - Edit a.rs +2 -2

     1  1  fn one() {
     2   -     return 1;
        2+     return 10;
     3  3  }
     4  4
     5  5  fn two() {
     6   -     return 2;
        6+     return 20;
     7  7  }

backgrounds:
.=reset  B=#070808  C=#111312  D=#201414  E=#402828  F=#121F16  G=#2A4030
0: .2 B76
1: .2 B76
2: .2 C76
3: .2 D20 E2 D54
4: .2 F20 G3 F53
5: .2 C76
6: .2 C76
7: .2 C76
8: .2 D20 E2 D54
9: .2 F20 G3 F53
10: .2 C76
