crates/neenee-code/src/tui/render/snapshots/neenee_code__tui__render__snapshot_tests__list_dir_expanded_renders_listing.snap
---
source: crates/neenee-code/src/tui/render/snapshot_tests.rs
expression: "render_grid(&m, 80, 30)"
---
  - List .

    src/
    tests/
    Cargo.toml
    README.md

backgrounds:
.=reset  B=#070808  C=#111312
0: .2 B76
1: .2 B76
2: .2 C76
3: .2 C76
4: .2 C76
5: .2 C76
